# juicy-renderer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/resources/: resources.rc
app/src/: main.cpp
cmake/: compiler_warnings.cmake  imgui.cmake  imgui_file_dialog.cmake
juicy-fd/: CMakeLists.txt
juicy-fd/src/juicy-fd/: FileDialog.cpp  FileDialog.h
juicy-renderer/: CMakeLists.txt
juicy-renderer/src/: App.cpp  App.h
juicy-renderer/src/components/: ComponentTypeId.cpp  ComponentTypeId.h  Components.h  Identification.h  Light.h  Sprite.h  Transform.h
juicy-renderer/src/editor/: ContentManager.cpp  ContentManager.h  DiffUtil.h  Editor.cpp  Editor.h  EditorUtil.h  ExporterManager.cpp  ExporterManager.h  ProjectManager.cpp  ProjectManager.h  TransactionManager.cpp  TransactionManager.h
juicy-renderer/src/editor/widgets/: ContentBrowser.cpp  ContentBrowser.h  Hierarchy.cpp  Hierarchy.h  History.cpp  History.h  Inspector.cpp  Inspector.h  Viewport.cpp  Viewport.h  Widget.h
juicy-renderer/src/framework/: BlendState.cpp  BlendState.h  Buffer.cpp  Buffer.h  Framework.cpp  Framework.h  SamplerState.cpp  SamplerState.h  Shader.cpp  ShaderReflection.cpp  ShaderReflection.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h
juicy-renderer/src/module/: Module.h  ModuleManager.h
juicy-renderer/src/precompiled/: pch.h
juicy-renderer/src/renderer/: Buffer.cpp  Buffer.h  Framework.cpp  Framework.h  JuicyRenderer.cpp  JuicyRenderer.h  RenderCommand.h  RenderManager.cpp  RenderManager.h  Renderer.cpp  Renderer.h  RendererManager.cpp  RendererManager.h  Shader.cpp  Shader.h  ShaderReflection.cpp  Texture.cpp  Window.cpp  Window.h
juicy-renderer/src/util/: FileWatcher.h  Logger.cpp  Logger.h  MessageEmitter.h  StringId.cpp  StringId.h  TypeId.cpp  TypeId.h
juicy-renderer/src/world/: Scene.cpp  Scene.h
